clang/test/CIR/Tools/cir-translate/invalid-translate-triple.cir
// RUN: cir-translate -verify-diagnostics --cir-to-llvmir --target foobar --disable-cc-lowering %s 2>&1

// expected-error@below {{invalid target triple 'foobar'}}
module attributes {cir.type_size_info = #cir.type_size_info<char = 8, int = 32, size_t = 64>} {
  cir.func @foo() {
    cir.return
  }
}
